--- a/neural_networks.ipynb
+++ b/neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('data/train_translated.csv')"
+    "train = pd.read_csv('data/test.csv')"
    ]
   },
   {
