translate units in prep

--- a/translation.ipynb
+++ b/translation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "test_translated = pd.read_csv('data/test_translated.csv', index_col='id', dtype={'type': str})\n",
     "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
-    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})"
+    "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
+    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe732728",
    "metadata": {},
    "outputs": [],
@@ -62,35 +63,42 @@
     "    original = data[column].dropna().unique()\n",
     "    original_no_num = [item for item in original if not item.isnumeric()] # in some columns there are numbers as str that cant be translated\n",
     "    translated = [GoogleTranslator(source='et', target='en').translate(word) for word in original_no_num]\n",
-    "    print('done')\n",
     "    data[column] = data[column].replace(original_no_num, translated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "51866af3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nfor column in []:\\n    translate(test, column)\\n    print(column, 'done')\\n    test.to_csv('data/test_translated.csv')\\n\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use: array of column names. replace which data set is to be used and what file is written\n",
     "# eg: # train: 'material', 'name', 'commentary', 'event_type', 'location', 'country_and_unit', 'participants_role', 'text', 'class', 'technique', 'parameter', 'legend',  'damages', 'color', 'type', 'initial_info', 'additional_text', 'state', 'before_Christ'\n",
     "\n",
     "def translate_columns(columnns):\n",
-    "    for column in []:\n",
-    "        translate(test, column)\n",
+    "    for column in columnns:\n",
+    "        translate(prep, column)\n",
     "        print(column, 'done')\n",
-    "        test.to_csv('data/test_translated.csv')"
+    "        prep.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n",
+      "unit done\n"
+     ]
+    }
+   ],
+   "source": [
+    "# translate_columns(['unit'])"
    ]
   },
   {
