split w/h values and units in preo

--- a/untis_sizes.ipynb
+++ b/untis_sizes.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finish unit tranlation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,44 +69,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "cm              5200\n",
-       "lk              1301\n",
-       "leht             942\n",
-       "24 x 36 mm       808\n",
-       "60 x 60 mm       391\n",
-       "mm               386\n",
-       "g                231\n",
-       "90 x 120 mm       55\n",
-       "60 x 95 mm        39\n",
-       "tk                37\n",
-       "100 x 150 mm      12\n",
-       "autoripoogen       7\n",
-       "sajand             6\n",
-       "130 x 180 mm       6\n",
-       "45 x 60 mm         3\n",
-       "A6                 2\n",
-       "180 x 240 mm       2\n",
-       "dm3                1\n",
-       "60 x 90 mm         1\n",
-       "number             1\n",
-       "10 x 15 cm         1\n",
-       "Name: unit, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.unit.value_counts()"
+    "# e.g wrong translation\n",
+    "data['unit'] = data['unit'].replace('e.g','mm')\n",
+    "data['unit'] = data['unit'].replace('pc','pieces')\n",
+    "data['unit'] = data['unit'].replace('page','pages')\n",
+    "# unify units\n",
+    "data['unit'] = data['unit'].replace('10 x 15 cm','100 x 150 mm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combine parameter, unit & w/h values to value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['unit'] = data['unit'].replace(np.nan,'*')\n",
+    "data['parameter'] = data['parameter'].replace(np.nan,'*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_squared(item):\n",
+    "    if ' x ' in item:\n",
+    "        return item + '²'\n",
+    "    else:\n",
+    "        return item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['unit'] = data['unit'].apply(lambda x: get_squared(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_width_height_from_unit_to_value(item):\n",
+    "    unit = item[0]\n",
+    "    value = item[1]\n",
+    "    if ' x ' in unit:\n",
+    "        split = unit.split(' ')\n",
+    "        x = split[0]\n",
+    "        y = split[2]\n",
+    "        real_unit = split[3]\n",
+    "        real_value = [x,y]        \n",
+    "        return [real_unit, real_value]\n",
+    "\n",
+    "    else:\n",
+    "        return [unit, value]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# execution order is important\n",
+    "data['value'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[1], axis=1)\n",
+    "data['unit'] = data.apply(lambda item: extract_width_height_from_unit_to_value(item[['unit','value']])[0], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['pu'] = data['parameter'] + ' IN ' + data['unit']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
