make para_units features to float + split up height, width values

--- a/untis_sizes.ipynb
+++ b/untis_sizes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_41892/1699356385.py:9: DtypeWarning: Columns (13) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_6336/1699356385.py:9: DtypeWarning: Columns (13,266) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
      ]
     }
@@ -349,6 +349,90 @@
    "source": [
     "data.to_csv('data/prep.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# make all size features numeric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_height_width(item):    \n",
+    "    if type(item) == str:\n",
+    "        # Converting string to list\n",
+    "        res = item.strip('][').split(', ')\n",
+    "        h = float(res[0].strip('\\''))\n",
+    "        w = float(res[1].strip('\\''))\n",
+    "        return [h,w]\n",
+    "\n",
+    "    else:\n",
+    "        return [float('nan'), float('nan')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in data.columns:\n",
+    "    # all the parameter with unit columns that contain arrays that are represeted as strings\n",
+    "    if (' IN ' in column) and (data[column].dtype == object):\n",
+    "        data[column + '_height'] = data.apply(lambda item: extract_height_width(item[column])[0], axis=1)\n",
+    "        data[column + '_width'] = data.apply(lambda item: extract_height_width(item[column])[1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prep.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
