finish feature eng for para_unit_value

--- a/untis_sizes.ipynb
+++ b/untis_sizes.ipynb
@@ -399,7 +399,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in data.columns:\n",
+    "    if (' IN ' in column):\n",
+    "        data[column] = data[column].replace(np.nan,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,11 +418,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# some more"
+   ]
   },
   {
    "cell_type": "code",
