--- a/translation.ipynb
+++ b/translation.ipynb
@@ -30,7 +30,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30959/1699356385.py:9: DtypeWarning: Columns (13,266) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
+     ]
+    }
+   ],
    "source": [
     "# dtype={'type': str} prevents being confused with data type for large data sets\n",
     "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
@@ -156,6 +165,42 @@
     "        if has_cyrillic(word):\n",
     "            translation = GoogleTranslator(source='ru', target='en').translate(str(word))\n",
     "            combined_data_translated[column] = combined_data_translated[column].replace(word, translation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean type translation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = prep.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.type = data.type.replace({'there':'seal', 'there/imprint':'seal/imprint', 'a letter':'letter',\\\n",
+    "    'sheet music':'music sheet', 'in small print':'small print', 'in the country':'country',\\\n",
+    "    'a suit':'suit'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prep.csv')"
    ]
   }
  ],
