--- a/formatting.ipynb
+++ b/formatting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Target of this Notebook:\n",
+    "Goal of this Notebook:\n",
     "\n",
     "'Start' and 'End' have multiple different formats. The goal is to put the information into a uniform and useable format.\n",
     "This is done by splitting both columns up in 3 columns each. For days and months there is an indicator now that shows whether these values are given. The year is in an own column and it is 0 if there as none given. The original columns were deleted from the data."
