--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,8 @@
     "import re \n",
     "from math import isnan\n",
     "import wandb\n",
+    "import random\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
@@ -30,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_44654/1699356385.py:9: DtypeWarning: Columns (7,253) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_9254/1699356385.py:9: DtypeWarning: Columns (7,253) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
      ]
     }
@@ -63,62 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'wandb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/random_forest.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m wandb\u001b[39m.\u001b[39minit(project\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodels\u001b[39m\u001b[39m\"\u001b[39m, entity\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmuseum-item-classification\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'wandb' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "wandb.init(project=\"models\", entity=\"museum-item-classification\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sweep_configuration = {\n",
-    "    'method': 'random',\n",
-    "    'name': 'sweep',\n",
-    "    'metric': {'goal': 'maximize', 'name': 'val_acc'},\n",
-    "    'parameters': \n",
-    "    {\n",
-    "        'batch_size': {'values': [16, 32, 64]},\n",
-    "        'epochs': {'values': [5, 10, 15]},\n",
-    "        'lr': {'max': 0.1, 'min': 0.0001}\n",
-    "     }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sweep_id = wandb.sweep(sweep=sweep_configuration, project='my-first-sweep')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
+    "from deep_translator import GoogleTranslator\n",
+    "import re \n",
+    "from math import isnan\n",
     "import wandb\n",
-    "import numpy as np \n",
     "import random\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Define sweep config\n",
     "sweep_configuration = {\n",
@@ -127,57 +90,44 @@
     "    'metric': {'goal': 'maximize', 'name': 'val_acc'},\n",
     "    'parameters': \n",
     "    {\n",
-    "        'batch_size': {'values': [16, 32, 64]},\n",
-    "        'epochs': {'values': [5, 10, 15]},\n",
-    "        'lr': {'max': 0.1, 'min': 0.0001}\n",
+    "        'est': {'values': [10, 100, 1000]},\n",
+    "        'depth': {'values': [5, 10, 15]},\n",
     "     }\n",
     "}\n",
     "\n",
     "# Initialize sweep by passing in config. (Optional) Provide a name of the project.\n",
-    "sweep_id = wandb.sweep(sweep=sweep_configuration, project='my-first-sweep')\n",
-    "\n",
-    "# Define training function that takes in hyperparameter values from `wandb.config` and uses them to train a model and return metric\n",
-    "def train_one_epoch(epoch, lr, bs): \n",
-    "  acc = 0.25 + ((epoch/30) +  (random.random()/10))\n",
-    "  loss = 0.2 + (1 - ((epoch-1)/10 +  random.random()/5))\n",
-    "  return acc, loss\n",
-    "\n",
-    "def evaluate_one_epoch(epoch): \n",
-    "  acc = 0.1 + ((epoch/20) +  (random.random()/10))\n",
-    "  loss = 0.25 + (1 - ((epoch-1)/10 +  random.random()/6))\n",
-    "  return acc, loss\n",
+    "sweep_id = wandb.sweep(sweep=sweep_configuration, project='sweep')\n",
     "\n",
     "def main():\n",
-    "    run = wandb.init()\n",
+    "    run = wandb.init(project=\"sweep\")\n",
     "\n",
     "    # note that we define values from `wandb.config` instead \n",
-    "    # of defining hard values\n",
-    "    lr  =  wandb.config.lr\n",
-    "    bs = wandb.config.batch_size\n",
-    "    epochs = wandb.config.epochs\n",
+    "    # of defining hard values \n",
+    "    est = wandb.config.est\n",
+    "    depth = wandb.config.depth\n",
     "\n",
-    "    for epoch in np.arange(1, epochs):\n",
-    "      train_acc, train_loss = train_one_epoch(epoch, lr, bs)\n",
-    "      val_acc, val_loss = evaluate_one_epoch(epoch)\n",
+    "    rfc = RandomForestClassifier(n_estimators=est, max_depth=depth, random_state=0)\n",
+    "    rfc.fit(X_train, y_train)\n",
     "\n",
-    "      wandb.log({\n",
-    "        'epoch': epoch, \n",
-    "        'train_acc': train_acc,\n",
-    "        'train_loss': train_loss, \n",
-    "        'val_acc': val_acc, \n",
-    "        'val_loss': val_loss\n",
-    "      })\n",
+    "    y_pred = rfc.predict(X_test)\n",
+    "    probs = rfc.predict_proba(X_test)\n",
+    "    val_acc = accuracy_score(y_test, y_pred)\n",
+    "    \n",
+    "    y_pred = rfc.predict(X_train)\n",
+    "    probs = rfc.predict_proba(X_train)\n",
+    "    train_acc = accuracy_score(y_train, y_pred)\n",
+    "\n",
+    "    print(train_acc, val_acc)\n",
+    "    \n",
+    "\n",
+    "    wandb.log({\n",
+    "      'train_acc': train_acc,\n",
+    "      'val_acc': val_acc,\n",
+    "    })\n",
     "\n",
     "# Start sweep job.\n",
     "wandb.agent(sweep_id, function=main, count=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
