--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -106,6 +106,8 @@
     "    est = wandb.config.est\n",
     "    depth = wandb.config.depth\n",
     "\n",
+    "    # -------------------------- usual training code starts here  -------------------------------------\n",
+    "\n",
     "    rfc = RandomForestClassifier(n_estimators=est, max_depth=depth, random_state=0)\n",
     "    rfc.fit(X_train, y_train)\n",
     "\n",
@@ -118,6 +120,8 @@
     "    train_acc = accuracy_score(y_train, y_pred)\n",
     "\n",
     "    print(train_acc, val_acc)\n",
+    "\n",
+    "    # -------------------------- ends here  -------------------------------------\n",
     "    \n",
     "\n",
     "    wandb.log({\n",
