--- a/Hot_encoding_2.ipynb
+++ b/Hot_encoding_2.ipynb
@@ -3989,7 +3989,7 @@
     "#46 different values in total\n",
     "#again quite discriptive - gives clues to the type\n",
     "#some have very high value_counts - maybe set a higher threshold\n",
-    "#Threshold of around 100?"
+    "#Threshold of around 100? -> 10 ok"
    ]
   },
   {
@@ -8577,7 +8577,8 @@
    "source": [
     "data['collection_additional_nr'].value_counts()\n",
     "#4530 different values\n",
-    "#Set Threshold to 30? - only includes the alphabetic vlaues?  or also 100? "
+    "#Set Threshold to 30? - only includes the alphabetic vlaues?  or also 100? \n",
+    "# -> 10"
    ]
   },
   {
@@ -9387,7 +9388,7 @@
     "data['damages'].value_counts()\n",
     "#786 different values\n",
     "#Some features give clues such as 'The album pages are deformed, there are tears and bruises, the binding holes are broken.'\n",
-    "#Could set Threshold to 15 - 14 new cols\n",
+    "#Could set Threshold to 15 - 14 new cols -> 10\n",
     "#Some columns have similar meaning - could group these eg. 'glue marks on the back', 'traces of glue on the back', 'traces of glue'"
    ]
   },
@@ -11781,7 +11782,7 @@
    "source": [
     "data['participant'].value_counts()\n",
     "#2370 - participent names\n",
-    "#Could either set threshold to 100 and have 8 new cols or have a has_value/NaN col?"
+    "#Could either set threshold to 100 (-> 50) and have 8 new cols or have a has_value/NaN col?"
    ]
   },
   {
@@ -16467,7 +16468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -16481,7 +16482,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
